Finished the measurement method